@@ -4838,6 +4838,124 @@ _imul(x86_64_target_t target, const operand_vector_t *operands,
 }
 
 /*
+ * IN (Vol. 2A 3-382)
+ *
+ *      Opcode          Instruction             Op/En   64-bit  Compat/Leg
+ *      E4 ib           IN AL,imm8              I       Valid   Valid
+ *      E5 ib           IN AX,imm8              I       Valid   Valid
+ *      E5 ib           IN EAX,imm8             I       Valid   Valid
+ *      EC              IN AL,DX                NP      Valid   Valid
+ *      ED              IN AX,DX                NP      Valid   Valid
+ *      ED              IN EAX,DX               NP      Valid   Valid
+ *
+ *
+ *      Op/En   Operand1        Operand2        Operand3        Operand4
+ *      I       imm8            NA              NA              NA
+ *      NP      NA              NA              NA              NA
+ */
+static int
+_in(x86_64_target_t target, const operand_vector_t *operands,
+    x86_64_instr_t *instr)
+{
+    operand_t *op1;
+    operand_t *op2;
+    x86_64_val_t *val1;
+    x86_64_val_t *val2;
+    int ret;
+    x86_64_enop_t enop;
+    size_t opsize;
+    size_t addrsize;
+    int opcode1;
+    int opcode2;
+    int opcode3;
+
+    if ( 2 == mvector_size(operands) ) {
+        op1 = mvector_at(operands, 0);
+        op2 = mvector_at(operands, 1);
+
+        val1 = x86_64_eval_operand(op1);
+        if ( NULL == val1 ) {
+            /* Error */
+            return -1;
+        }
+        val2 = x86_64_eval_operand(op2);
+        if ( NULL == val2 ) {
+            /* Error */
+            free(val1);
+            return -1;
+        }
+
+        if ( _eq_reg(val1, REG_AL) && _is_imm8(val2) ) {
+            ret = _encode_i(val2, SIZE8, &enop);
+            opsize = SIZE8;
+            addrsize = 0;
+            opcode1 = 0xe4;
+            opcode2 = -1;
+            opcode3 = -1;
+        } else if ( _eq_reg(val1, REG_AX) && _is_imm8(val2) ) {
+            ret = _encode_i(val2, SIZE8, &enop);
+            opsize = SIZE8;
+            addrsize = 0;
+            opcode1 = 0xe5;
+            opcode2 = -1;
+            opcode3 = -1;
+        } else if ( _eq_reg(val1, REG_EAX) && _is_imm8(val2) ) {
+            ret = _encode_i(val2, SIZE8, &enop);
+            opsize = SIZE8;
+            addrsize = 0;
+            opcode1 = 0xe5;
+            opcode2 = -1;
+            opcode3 = -1;
+        } else if ( _eq_reg(val1, REG_AL) && _eq_reg(val1, REG_DX) ) {
+            ret = 0;
+            opsize = SIZE8;
+            addrsize = 0;
+            opcode1 = 0xec;
+            opcode2 = -1;
+            opcode3 = -1;
+        } else if ( _eq_reg(val1, REG_AX) && _eq_reg(val1, REG_DX) ) {
+            ret = 0;
+            opsize = SIZE16;
+            addrsize = 0;
+            opcode1 = 0xed;
+            opcode2 = -1;
+            opcode3 = -1;
+        } else if ( _eq_reg(val1, REG_EAX) && _eq_reg(val1, REG_DX) ) {
+            ret = 0;
+            opsize = SIZE32;
+            addrsize = 0;
+            opcode1 = 0xed;
+            opcode2 = -1;
+            opcode3 = -1;
+        } else {
+            ret = -1;
+        }
+
+        if ( ret < 0 ) {
+            free(val1);
+            free(val2);
+            return -EOPERAND;
+        }
+        ret = _build_instruction(target, &enop, opsize, addrsize, instr);
+        if ( ret < 0 ) {
+            free(val1);
+            free(val2);
+            return -EOPERAND;
+        }
+        instr->opcode1 = opcode1;
+        instr->opcode2 = opcode2;
+        instr->opcode3 = opcode3;
+
+        free(val1);
+        free(val2);
+
+        return 0;
+    } else {
+        return -EOPERAND;
+    }
+}
+
+/*
  * JMP (Vol. 2A 3-424)
  *
  *      Opcode          Instruction             Op/En   64-bit  Compat/Leg
@@ -5592,6 +5710,9 @@ arch_assemble_x86_64(stmt_vector_t *vec)
             } else if ( 0 == strcasecmp("imul", stmt->u.instr->opcode) ) {
                 /* IMUL */
                 ret = _imul(target, stmt->u.instr->operands, &instr);
+            } else if ( 0 == strcasecmp("in", stmt->u.instr->opcode) ) {
+                /* IN */
+                ret = _in(target, stmt->u.instr->operands, &instr);
             } else if ( 0 == strcasecmp("jmp", stmt->u.instr->opcode) ) {
                 /* JMP */
                 ret = _jmp(target, stmt->u.instr->operands, &instr);
